# python-docx

./: .gitignore  pyproject.toml
.github/workflows/: publish.yaml
docx/: __init__.py  api.py  api.pyi  document.pyi  package.pyi  py.typed  shared.pyi
docx/enum/: text.pyi
docx/opc/: constants.py  oxml.py  package.py  part.py  part.pyi  rel.py
docx/oxml/: ns.pyi
docx/styles/: style.py  styles.pyi
docx/text/: font.pyi  paragraph.pyi
